2012-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-set-global-variables): Don't assume that the group
	buffer exists, which it doesn't if we haven't started Gnus.
	(gnus-summary-exit): Allow quitting when we don't have a group buffer.

2012-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	pgg-def.el, pgg-gpg.el, pgg-parse.el, pgg-pgp.el, pgg-pgp5.el, pgg.el:
	Remove.

	dgnushack.el (pgg-snarf-keys-region): Remove autoload.

	lpath.el (pgg-parse-crc24-string, pgg-parse-crc24): Remove declaration.

2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mml.el (mml-generate-mime): Allow specifying what the top-level part
	type is.

	* gnus-start.el (gnus-clean-old-newsrc): Remove totally bogus
	`unexists' entries.
	(gnus-clean-old-newsrc): Fix last checkin.

	* nnimap.el (nnimap-update-info): None of the articles below the active
	low-water mark exist.

	* dgnushack.el: Get rid of XEmacs compilation warning.

	* gnus-msg.el (gnus-summary-cancel-article): See what From header we
	would have gotten if we posted to the group, and use that to compare
	against the message we want to cancel (bug#10808).

	* gnus-sum.el (gnus-auto-center-summary): `scroll-margin' isn't defined
	on XEmacs.

2012-04-10  Philipp Haselwarter  <philipp.haselwarter@gmx.de>  (tiny change)

	* gnus-sum.el (gnus-auto-center-summary): Set default to respect
	`scroll-margin'.

2012-04-10  Elias Oltmanns  <eo@nebensachen.de>  (tiny change)

	* gnus-cite.el (gnus-dissect-cited-text): A single line without
	citation prefix within a block of cited text should be considered part
	of that block *only* if it is a blank line.

2012-04-09  Chong Yidong  <cyd@gnu.org>

	* binhex.el, hashcash.el, uudecode.el:
	Remove * characters from the front of variable docstrings.

2012-04-05  Bastien Guerry  <bzg@altern.org>

	* color.el (color-lighten-name): Fix typo.

2012-04-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-find-fill-point): Remove unused code; don't break a line