@@ -2315,14 +2315,17 @@ Return the name of the group if selection was successful."
      `(-1 nil (,group
 	       ,gnus-level-default-subscribed nil nil ,method
 	       ,(cons
-		 (cond
-		  (quit-config
-		   (cons 'quit-config quit-config))
-		  ((assq gnus-current-window-configuration
-			 gnus-buffer-configuration)
-		   (cons 'quit-config
+		 (cons 'quit-config
+		       (cond
+			(quit-config
+			 quit-config)
+			((assq gnus-current-window-configuration
+			       gnus-buffer-configuration)
 			 (cons gnus-summary-buffer
-			       gnus-current-window-configuration))))
+			       gnus-current-window-configuration))
+			(t
+			 (cons (current-buffer)
+			       (current-window-configuration)))))
 		 parameters)))
      gnus-newsrc-hashtb)
     (push method gnus-ephemeral-servers)
